@startuml
interface Endpoints
interface JsonEntities {
  type JsonRequest[A]
  type JsonResponse[A]
}
interface JsonSchemas {
  type JsonSchema[A]
}
interface JsonEntitiesFromCodecs {
  type JsonCodec[A]
  type JsonRequest[A] = JsonCodec[A]
  type JsonResponse[A] = JsonCodec[A]
}
interface JsonEntitiesFromSchemas {
  type JsonRequest[A] = JsonSchema[A]
  type JsonResponse[A] = JsonSchema[A]
}
Endpoints <|-- JsonEntities
JsonEntities <|-- JsonEntitiesFromSchemas
JsonSchemas <|-- JsonEntitiesFromSchemas
JsonEntities <|-- JsonEntitiesFromCodecs
@enduml